refactor: 랭킹 웹소켓 연결 문제 수정